--- a/package.json
+++ b/package.json
@@ -15,13 +15,17 @@
     "@mui/icons-material": "^5.16.5",
     "@mui/material": "^5.16.5",
     "@supabase/supabase-js": "^2.45.1",
+    "@tsparticles/react": "^3.0.0",
     "dotenv": "^16.4.5",
     "lucide-react": "^0.427.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.25.1",
-    "react-transition-group": "^4.4.5"
+    "react-transition-group": "^4.4.5",
+    "react-tsparticles": "^2.12.2",
+    "tsparticles": "^3.5.0",
+    "tsparticles-slim": "^2.12.0"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
